--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Index.cshtml
@@ -5,7 +5,7 @@
              .button()
              .click(function () {
                  //alert(this.id);
-                 location.href = "http://" + self.location.host + "/Tool/Create?type=" + this.id;
+                 location.href = "http://" + self.location.host + "/Tool/AddTool?ToolType=";
              });
     });
 
