--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Create.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Create.cshtml
@@ -22,7 +22,7 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        width: 30%;
+        width: 90%;
     }
 
         #tymenu li {
@@ -31,6 +31,22 @@
             font-size: 1.4em;
             height: 18px;
         }
+    #contTypes {
+        width:50%;
+        float:left;
+        background-color:#c804b8;        
+    }
+    #contProperty {
+        float:left;
+           background-color:#FECA40;     
+    }
+
+    #dCreateTool {
+       width:80%;
+       height:300px;
+        float:left;
+        background-color:#808080;
+    }
 </style>
 
 <script>
@@ -47,23 +63,25 @@
         });
 
     });
-
 </script>
 
-<h2>Create</h2>
+<h2>Crear Herramienta</h2>
 
-<ol id="tymenu">
-    @foreach (var item in ViewBag.idType)
-    {
-        <li id="@item.Value" class="ui-widget-content">@item.Text</li>
-    }
-</ol>
+<div id="dCreateTool">
 
-<div id="contProperty">
-    <p>Esto sera reemplazado</p>
+    <div id="contTypes">
+        <ol id="tymenu">
+            @foreach (var item in ViewBag.idType)
+            {
+                <li id="@item.Value" class="ui-widget-content">@item.Text</li>
+            }
+        </ol>
+    </div>
+    <div id="contProperty">        
+    </div>
 </div>
 
-@using (Ajax.BeginForm("GetProperties", "Tool", FormMethod.Post, new AjaxOptions()
+@using (Ajax.BeginForm("GetProperties", "Property", FormMethod.Post, new AjaxOptions()
 {
     InsertionMode = InsertionMode.Replace,
     UpdateTargetId = "contProperty"
