--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialProperties.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialProperties.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Tenaris.Tamsa.HRM.Fat2.DataAccess.Models.Tool_Property>
-<script src="../../Scripts/_references.js" type="text/javascript"></script>
-<script src="//cdn.jsdelivr.net/jquery.add-input-area/4.7.2/jquery.add-input-area.min.js"></script>
+@*<script src="../../Scripts/_references.js" type="text/javascript"></script>
+<script src="//cdn.jsdelivr.net/jquery.add-input-area/4.7.2/jquery.add-input-area.min.js"></script>*@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
