--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
@@ -86,10 +86,10 @@
             <table id="mnCreateTool">
                 <tr>
                     <td>
-                        <img alt="Puntas" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
+                        <img alt="Catalogo" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
                     </td>
                     <td>
-                        Crear 
+                        Catalogo 
                     </td>
                 </tr>
             </table>
