--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Property/Create.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Property/Create.cshtml
@@ -50,6 +50,7 @@
         if (data.result)
         {
             document.forms["frmGetProperties"].elements["idType"].value = data.idType;
+            document.forms["frmGetProperties"].elements["fromDb"].value = false;
             $("#frmGetProperties").submit();
         }
     }
