--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                      location.href = "@Url.Action("Find","Tool")";
                  }
                  if (this.id == "mnCreateTool") {
-                     location.href = "@Url.Action("Create","Tool")";
+                     location.href = "@Url.Action("Index","Catalog")";
                  }
                  
                  if (this.id == "mnTestView") {
