--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Index.cshtml
@@ -69,8 +69,9 @@
         background-color: #CCD9CC;
         color: #003366;
         padding-bottom: 4px;
-        padding-top: 5px;
-        text-align: left;
+        padding-top: 5px;        
+        font-size: 9pt;
+       
     }
 
     .webgrid-footer {
@@ -180,7 +181,7 @@
     });
 
 </script>
-
+@{Html.RenderPartial("PartialFilter");}
 
 
 <div id="content">
