--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Index.cshtml
@@ -181,11 +181,15 @@
     });
 
 </script>
+<div class="col-md-12" style="font-size: 12pt;font-weight: bold; background-color:#009999; color:#FFFFFF; height:20px; text-align:center; vertical-align:middle; font-family: Verdana; margin-bottom:3px">
+    Catalogo de herramientas
+</div>  <!-- Fin de la Cabecera de Reportes de Bitácora MPM -->
+
 @{Html.RenderPartial("PartialFilter");}
 
 
 <div id="content">
-    <div id="tHeader">Catalogo de Herramientas</div>
+   
     @grid.GetHtml(
                 htmlAttributes: new { id = "gridCatalog" },
                 tableStyle: "webgrid-table",
@@ -202,62 +206,7 @@
                                                                                                                              grid.Column(columnName: "UpdDateTime", header: "Fecha Actualizacion")
             //grid.Column(header: "Activo", format: @<text><input type="checkbox" checked="@item." disabled="disabled" /></text>)
                                                                                                                                               ))
-    <div id="gridFooter">
-        <div class="Tenaris">
-
-            <ul class="ulmenu">
-                <li>
-                    <div class='mbtn'>
-                        <table id="mnDetails">
-                            <tr>
-
-                                <td>
-                                    Detalles
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </li>
-                <li>
-                    <div class='mbtn'>
-                        <table id="mnFindTool">
-                            <tr>
-
-                                <td>
-                                    Buscar
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </li>
-                <li>
-                    <div class='mbtn'>
-                        <table id="mnCreateTool">
-                            <tr>
-
-                                <td>
-                                    Agregar
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </li>
-                <li>
-                    <div class='mbtn'>
-                        <table id="mnTestView">
-                            <tr>
-
-                                <td>
-                                    Eliminar
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </li>
-
-            </ul>
-        </div>
-    </div>
+  
 </div>
 
 <input type="hidden" id="idTemp" />
