--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/datatimepicker_es")
+    
     <style>
         #contenedor
         {
