--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Details.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tenaris.Tamsa.HRM.Fat2.DataAccess.AusV1.Tool_Tool
+﻿@model Tenaris.Tamsa.HRM.Fat2.DataAccess.Models.Tool_Tool
 
 @{
     ViewBag.Title = "Details";
