--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Content/TenarisWebApplication.css
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Content/TenarisWebApplication.css
@@ -63,7 +63,7 @@
 
 .csbutton
 {
-	width: 300px;
+	width: 130px;
 	height: 30px;
 	background-color: #D3D3D3;
 	color: #000000;
@@ -134,10 +134,11 @@
 	font-size: 10pt;
 	width: 140px;
 	background-color: #E5E5E5;
+    border:1px solid #FFFFFF;
 }
 
 .itemcellValue
-{
+{    
 	width: 200px;
 }
 
@@ -149,6 +150,7 @@
 	font-family: Verdana;
 	font-size: 9pt;
 	background-color: #F3F3F3;
+    border:solid 1px;
 }
 
 .label /*SubHEader*/
@@ -199,7 +201,7 @@
 
 .textBox /*TableValueCell*/
 {
-	border-width: 0px;
+	border-width: 1px;
 	text-align: right; /*width:98%;*/
 	margin: 1px;
 	font-weight: bold;
@@ -423,9 +425,8 @@
 }
 
 .tableData
-{
-	border: 1px solid #000000;
-	background-color: #F3F3F3; /*width: 793px; 	height: 115px;*/
+{	
+	background-color: #F3F3F3; /*width: 793px; 	height: 115px;*/    
 }
 
 .divLayOut_Scroll
