--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Create.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Create.cshtml
@@ -1,1 +1,271 @@
-﻿
+﻿@model IEnumerable<Tenaris.Tamsa.HRM.Fat2.WebTools.Models.Tool_vm>
+
+@{
+    ViewBag.Title = "Create";
+    var grid = new WebGrid(source: Model, canPage: true, rowsPerPage: 10, selectionFieldName: "SelectedRow");
+    grid.Pager(WebGridPagerModes.All);
+}
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+<style>
+    #feedback {
+        font-size: 1.4em;
+    }
+
+    #tymenu .ui-selecting {
+        background: #FECA40;
+    }
+
+    #tymenu .ui-selected {
+        background: #c804b8;
+        color: white;
+    }
+
+    #tymenu {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 90%;
+    }
+
+        #tymenu li {
+            margin: 3px;
+            padding: 0.4em;
+            font-size: 1.4em;
+            height: 18px;
+        }
+
+    #contTypes {
+        width: 50%;
+        float: left;
+        background-color: #c804b8;
+    }
+
+    #contProperty {
+        float: left;
+        background-color: #FECA40;
+    }
+
+    #dCreateTool {
+        width: 80%;
+        height: 300px;
+        float: left;
+        background-color: #808080;
+    }
+    /*WebGrid*/
+    .webgrid-table {
+        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-size: 10pt;
+        width: 100%;
+        display: table;
+        background-color: #FFFFFF;
+    }
+
+        .webgrid-table td, th {
+            border: 1px solid #808080;
+            padding: 3px 7px 2px;
+        }
+
+    .webgrid-header {
+        background-color: #CCD9CC;
+        color: #003366;
+        padding-bottom: 4px;
+        padding-top: 5px;
+        font-size: 9pt;
+    }
+
+    .webgrid-footer {
+    }
+
+    .webgrid-row-style {
+        padding: 3px 7px 2px;
+    }
+
+    .webgrid-alternating-row {
+        background-color: #E5E5E5;
+        padding: 3px 7px 2px;
+    }
+
+    #tHeader {
+        background-color: #009999;
+        color: #ffffff;
+        font-family: Verdana;
+        font-weight: bold;
+        font-size: 12pt;
+        text-align: center;
+        height: 25px;
+    }
+
+    .clickable {
+        cursor: pointer;
+        background: #ffff99;
+    }
+
+    .selectRow {
+        background-color: #660066;
+        color: #FFFFFF;
+    }
+
+    /*Menu buttom*/
+    .ulmenu {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
+        .ulmenu li {
+            float: left;
+        }
+
+            .ulmenu li a {
+                display: block;
+                padding: 8px;
+                background-color: #dddddd;
+            }
+
+    .mbtn {
+        width: 215px;
+    }
+
+    #content {
+        border: 1px solid #808080;
+        padding: 3px 3px 3px 3px;
+    }
+</style>
+
+<script>
+    $(function () {
+
+        $("#tymenu").selectable({
+            selected: function (event, ui) {
+                var idtype = ui.selected.id;
+                document.forms["frmGetProperties"].elements["idType"].value = idtype;
+                document.forms["frmGetProperties"].elements["fromDb"].value = true;
+                //document.forms["frmGetProperties"].submit();
+                $("#frmGetProperties").submit();
+            }
+        });
+
+        $('#gridTools tbody tr').hover(function () {
+            $(this).toggleClass('clickable');
+        });
+        // .on('click', function () {
+        // location.href = '/Details/' + $(this).find('td:first').text();
+        //});
+        $('#gridTools tr').click(function () {
+
+            $(this).addClass('selectRow');
+            $('#gridTools tr').not(this).removeClass('selectRow');
+            var rowId = $(this).find("div").eq(0).attr('id');
+            $("#idTool").val(rowId);
+        });
+
+        if ($("#idTool").val().length > 0) {
+            $("#idTool").val("0");
+        }
+
+      
+
+        $("#btnDetails").button().click(function () {
+            var idTemp = $("#idTool").val();
+            if (idTemp.length == 0 || idTemp == 0)
+            { alert("Selecione un renglon."); return false; }
+            frm = document.getElementById("frmGoAction");
+            frm.action = "@Url.Action("Details", "Tool")";
+            frm.submit();
+            //location.href = "@Url.Action("Details", "Tool")?IdCatalog=" + idTemp;
+        });
+        $("#btnEdit").button().click(function () {
+            var idTemp = $("#idTool").val();
+            if (idTemp.length == 0 || idTemp == 0)
+            { alert("Selecione un renglon."); return false; }
+            frm = document.getElementById("frmGoAction");
+            frm.action = "@Url.Action("Edit", "Tool")";
+            frm.submit();
+        });
+        $("#btnDelete").button().click(function () {
+            var idTemp = $("#idTool").val();
+            if (idTemp.length == 0 || idTemp == 0)
+            { alert("Selecione un renglon."); return false; }
+            frm = document.getElementById("frmGoAction");
+            frm.action = "@Url.Action("Delete", "Tool")";
+            frm.submit();
+        });
+        //btnNew
+        $("#btnNew").button().click(function () {
+            location.href = "@Url.Action("New", "Tool")";
+        });
+    });
+
+
+
+</script>
+<div class="col-md-12" style="font-size: 12pt;font-weight: bold; background-color:#009999; color:#FFFFFF; height:20px; text-align:center; vertical-align:middle; font-family: Verdana; margin-bottom:3px">
+    Catalogo de herramientas
+</div>
+
+@{Html.RenderPartial("PartialFilter");}
+
+
+<div id="content">
+
+    @grid.GetHtml(
+                htmlAttributes: new { id = "gridTools" },
+                tableStyle: "webgrid-table",
+                headerStyle: "webgrid-header",
+                footerStyle: "webgrid-footer",
+                alternatingRowStyle: "webgrid-alternating-row",
+                rowStyle: "webgrid-row-style",
+                columns: grid.Columns(
+                 grid.Column(columnName: "IdType", header: "Tipo", format: @<text><div id="@item.IdCatalog">@item.IdType</div></text>),
+                                                                                                                          grid.Column(columnName: "Code", header: "Codigo"),
+                                                                                                                                                  grid.Column(columnName: "Name", header: "Nombre"),
+                                                                                                                                                  grid.Column(columnName: "Description", header: "Descripcion"),
+                                                                                                                                                  grid.Column(columnName: "InsDateTime", header: "Fecha Alta"),
+                                                                                                                                                  grid.Column(columnName: "UpdDateTime", header: "Fecha Actualizacion")
+            //grid.Column(header: "Activo", format: @<text><input type="checkbox" checked="@item." disabled="disabled" /></text>)
+                                                                                                                                                                   ))
+
+</div>
+
+<input type="hidden" id="idTemp" />
+
+<div id="gridFooter">
+    <div class="row" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
+
+        <div class="form-group">
+            <div class="col-sm-6" style=" padding-bottom:5px">
+                <input id="btnDetails" type=button value="Detalles" class="csbutton" style="margin-top:5px; width:150px; font-size:10pt;" />
+                <input id="btnEdit" type=button value="Modificar" class="csbutton" style="margin-top:5px; width:150px; font-size:10pt;" />
+                <input id="btnNew" type=button value="Nueva" class="csbutton" style="margin-top:5px; width:150px; font-size:10pt;" />
+                <input id="btnDelete" type=button value="Eliminar" class="csbutton" style="margin-top:5px; width:150px; font-size:10pt;" />
+            </div>
+        </div>
+    </div> <!-- Fin del ROW del Botón Buscar -->
+</div>
+
+
+@using (Ajax.BeginForm("/", "/", FormMethod.Post, new AjaxOptions()
+{
+    InsertionMode = InsertionMode.Replace,
+    UpdateTargetId = "contProperty"
+}, new { @name = "/", @id = "frmGetProperties" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    @Html.HiddenFor(model => model.FirstOrDefault().Active);
+    <input type="hidden" name="fromDb" value="true" />
+}
+
+@using (Html.BeginForm("/", "/", FormMethod.Post,
+    new { @name = "frmGoAction", @id = "frmGoAction" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    @Html.HiddenFor(model => model.FirstOrDefault().idTool);
+    <input type="hidden" name="fromDb" value="true" />
+}
+
+
+
+
